// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message plural translate plural messages 1`] = `
<I18nProvider
  dispatch={null}
  fallbackLang={null}
  initialLang="en"
  initialized={true}
  lang="pt"
  translations={
    Object {
      "pt": Object {
        "You have one message": "Você tem uma mensagem",
        "You have {count} messages": "Você tem {count} mensagens",
      },
    }
  }
  useReducer={false}
>
  <Message
    comment="Foo"
    context={null}
    future={false}
    id="You have one message"
    pluralCondition="count"
    pluralId="You have {count} messages"
    values={
      Object {
        "count": 2,
        "name": "foo",
      }
    }
  >
    Você tem 2 mensagens
  </Message>
</I18nProvider>
`;

exports[`Message plural translate singular form of plural messages 1`] = `
<I18nProvider
  dispatch={null}
  fallbackLang={null}
  initialLang="en"
  initialized={true}
  lang="pt"
  translations={
    Object {
      "pt": Object {
        "You have one message": "Você tem uma mensagem",
        "You have {count} messages": "Você tem {count} mensagens",
      },
    }
  }
  useReducer={false}
>
  <Message
    comment="Foo"
    context={null}
    future={false}
    id="You have one message"
    pluralCondition="count"
    pluralId="You have {count} messages"
    values={
      Object {
        "count": 1,
        "name": "foo",
      }
    }
  >
    Você tem uma mensagem
  </Message>
</I18nProvider>
`;

exports[`Message render 1`] = `
<I18nProvider
  dispatch={null}
  fallbackLang={null}
  initialLang="en"
  initialized={true}
  lang="en"
  translations={Object {}}
  useReducer={false}
>
  <Message
    comment="Foo"
    context={null}
    future={false}
    id="Hello {name}"
    pluralCondition={null}
    pluralId={null}
    values={
      Object {
        "name": "foo",
      }
    }
  >
    Hello foo
  </Message>
</I18nProvider>
`;
